refactor: rename path, add semantic tags, some typography  mixins

--- a/src/translation/en/global.json
+++ b/src/translation/en/global.json
@@ -2,8 +2,8 @@
   "loading": "Loading...",
   "header": {
     "nav": {
-      "welcome": "welcome",
-      "home": "home"
+      "home": "Home",
+      "company": "Сompany"
     }
   }
 }
