--- a/src/translation/ua/global.json
+++ b/src/translation/ua/global.json
@@ -2,8 +2,8 @@
   "loading": "Завантаження...",
   "header": {
     "nav": {
-      "welcome": "Вітаємо",
-      "home": "Дом"
+      "home": "Головна",
+      "company": "Компанія"
     }
   }
 }
