--- a/src/translation/en/global.json
+++ b/src/translation/en/global.json
@@ -3,7 +3,16 @@
   "header": {
     "nav": {
       "home": "Home",
-      "company": "Сompany"
-    }
-  }
+      "company": "Сompany",
+      "practice":"Practice",
+      "news":"News",
+      "contacts":"Contacts"
+    },
+    "btnAppoitment":"Make an appointment"
+  },
+  "titleText1":"Confidence",
+  "titleText2":"experience",
+  "titleText3":"result",
+  "subTitleText1":"We help private clients, state-owned companies, small and large businesses to decide legal issues of any complexity.",
+  "subTitleText2":"We help to anticipate the necessary changes and thus avoid difficult situations in the future."
 }
