--- a/src/translation/ua/global.json
+++ b/src/translation/ua/global.json
@@ -3,7 +3,17 @@
   "header": {
     "nav": {
       "home": "Головна",
-      "company": "Компанія"
-    }
-  }
+      "company": "Компанія",
+      "practice":"Практики",
+      "news":"Новини",
+      "contacts":"Контакти"
+    },
+    "btnAppoitment":"Записатися на консультацію"
+  },
+  "titleText1":"Довіра",
+  "titleText2":"досвід",
+  "titleText3":"результат",
+  "subTitleText1":"Ми допомагаємо приватним клієнтам, державним компаніям, малому і великому бізнесу вирішувати юридичні питання будь-якої складності.",
+  "subTitleText2":"Ми допомагаємо передбачати необхідні зміни і уникати таким чином складних ситуацій в майбутньому."
+
 }
