--- a/src/translation/en/global.json
+++ b/src/translation/en/global.json
@@ -10,9 +10,7 @@
     },
     "btnAppoitment":"Make an appointment"
   },
-  "titleText1":"Confidence",
-  "titleText2":"experience",
-  "titleText3":"result",
+  "titleText":"Trust,expertise, result",
   "subTitleText2":"We help private clients, state-owned companies, small and large businesses to decide legal issues of any complexity.",
   "subTitleText1":"We help to anticipate the necessary changes and thus avoid difficult situations in the future."
 }
