--- a/src/translation/ua/global.json
+++ b/src/translation/ua/global.json
@@ -10,9 +10,7 @@
     },
     "btnAppoitment":"Записатися на консультацію"
   },
-  "titleText1":"Довіра",
-  "titleText2":"досвід",
-  "titleText3":"результат",
+  "titleText":"Довіра, досвід, результат",
   "subTitleText2":"Ми допомагаємо приватним клієнтам, державним компаніям, малому і великому бізнесу вирішувати юридичні питання будь-якої складності.",
   "subTitleText1":"Ми допомагаємо передбачати необхідні зміни і уникати таким чином складних ситуацій в майбутньому."
 
