--- a/src/translation/ua/global.json
+++ b/src/translation/ua/global.json
@@ -4,14 +4,17 @@
     "nav": {
       "home": "Головна",
       "company": "Компанія",
-      "practice":"Практики",
-      "news":"Новини",
-      "contacts":"Контакти"
+      "practice": "Практики",
+      "news": "Новини",
+      "contacts": "Контакти"
     },
-    "btnAppoitment":"Записатися на консультацію"
+    "btnAppoitment": "Записатися на консультацію"
   },
-  "titleText":"Довіра, досвід, результат",
-  "subTitleText2":"Ми допомагаємо приватним клієнтам, державним компаніям, малому і великому бізнесу вирішувати юридичні питання будь-якої складності.",
-  "subTitleText1":"Ми допомагаємо передбачати необхідні зміни і уникати таким чином складних ситуацій в майбутньому."
-
+  "titleText": "Довіра, досвід, результат",
+  "subTitleText2": "Ми допомагаємо приватним клієнтам, державним компаніям, малому і великому бізнесу вирішувати юридичні питання будь-якої складності.",
+  "subTitleText1": "Ми допомагаємо передбачати необхідні зміни і уникати таким чином складних ситуацій в майбутньому.",
+  "practiceSection": {
+    "moreButton": "Далі",
+    "hideButton": "Згорнути"
+  }
 }
