--- a/src/translation/ua/global.json
+++ b/src/translation/ua/global.json
@@ -16,5 +16,27 @@
   "practiceSection": {
     "moreButton": "Далі",
     "hideButton": "Згорнути"
+  },
+  "appointmentForm": {
+    "firstTitle": "Контактна інформація",
+    "inputFirstName": "Ім’я",
+    "inputLastName": "Прізвище",
+    "inputPhone": "Телефон",
+    "inputEmail": "E-mail",
+    "privacyTitle": "Надаю дозвіл на обробку персональних даних.",
+    "privacyButton": "Політика конфіденційності.",
+    "nextButton": "Продовжити",
+    "cancelButton": "Скасувати",
+    "skipButton": "Пропустити",
+    "submitButton": "Записатись",
+    "secondTitle": "Записатись на консультацію",
+    "specializationSelectTitle": "Обрати спеціалізацію",
+    "specializationSelectDefault": "Спеціалізація",
+    "lawyerSelectTitle": "Обрати спеціаліста",
+    "lawyerSelectDefault": "Спеціаліст",
+    "thirdTitle": "Обрати дату",
+    "fourthTitle": "Обрати час",
+    "successTitle": "Вітаємо!",
+    "successText": "Ви успішно записались на консультацію. Ми зв'яжемося з Вами найближчим часом."
   }
 }
