fix styles appointment button, remove arrow icon, change styles paragraphs

--- a/src/translation/en/global.json
+++ b/src/translation/en/global.json
@@ -14,7 +14,7 @@
   "subTitleText2": "We help private clients, state-owned companies, small and large businesses to decide legal issues of any complexity.",
   "subTitleText1": "We help to anticipate the necessary changes and thus avoid difficult situations in the future.",
   "practiceSection": {
-    "moreButton": "More",
+    "moreButton": "Read more",
     "hideButton": "Collapse"
   },
   "appointmentForm": {
