--- a/src/translation/ua/global.json
+++ b/src/translation/ua/global.json
@@ -14,7 +14,7 @@
   "subTitleText2": "Ми допомагаємо приватним клієнтам, державним компаніям, малому і великому бізнесу вирішувати юридичні питання будь-якої складності.",
   "subTitleText1": "Ми допомагаємо передбачати необхідні зміни і уникати таким чином складних ситуацій в майбутньому.",
   "practiceSection": {
-    "moreButton": "Далі",
+    "moreButton": "Читати далі",
     "hideButton": "Згорнути"
   },
   "appointmentForm": {
