--- a/src/translation/en/global.json
+++ b/src/translation/en/global.json
@@ -37,9 +37,13 @@
     "thirdTitle": "Select Date",
     "fourthTitle": "Select time",
     "successTitle": "Congratulations!",
-    "successText": "You have successfully signed up for a consultation. We will contact you shortly.",
+    "successTextOne": "You have successfully signed up for a consultation.",
+    "successTextOneFeedBack": "Your message has been successfully delivered.",
+    "successTextTwo": "We will contact you shortly.",
     "failureTitle": "Sorry!",
-    "failureText": "There was an error. Please choose another consultation date.",
+    "failureTextOne": "There was an error.",
+    "failureTextTwo": "Please choose another consultation date.",
+    "failureTextTwoFeedBack": "Please try again.",
     "returnButton": "Come back"
   }
 }
