refactor footer, all localize, remove send email by click

--- a/src/translation/en/global.json
+++ b/src/translation/en/global.json
@@ -55,5 +55,9 @@
     "labelQuestion": "Your question",
     "placeholderQuestion": "Enter question",
     "submitButton": "Submit"
+  },
+  "footer": {
+    "privacyDocTitle": "Privacy policy",
+    "termsUseSiteDocTitle": "Terms of use of the site"
   }
 }
