fix feedbackForm styles

--- a/src/translation/en/global.json
+++ b/src/translation/en/global.json
@@ -47,7 +47,7 @@
     "returnButton": "Come back"
   },
   "feedBackForm": {
-    "title": "Contact us acstatus.mk@gmail.com",
+    "title": "Contact us",
     "labelName": "Your Name",
     "placeholderName": "Enter a name",
     "labelPhone": "Your phone number",
