--- a/src/translation/ua/global.json
+++ b/src/translation/ua/global.json
@@ -47,7 +47,7 @@
     "returnButton": "Повернутись"
   },
   "feedBackForm": {
-    "title": "Зв'яжіться з нами acstatus.mk@gmail.com",
+    "title": "Зв'яжіться з нами",
     "labelName": "Ваше ім’я",
     "placeholderName": "Введіть ім’я",
     "labelPhone": "Ваш номер телефону",
