--- a/src/translation/en/global.json
+++ b/src/translation/en/global.json
@@ -10,6 +10,10 @@
     },
     "btnAppoitment": "Make an appointment"
   },
+  "owner": {
+    "title": "Адвокатська компанія",
+    "subTitle": "«STATUS»"
+  },
   "information": {
     "title": "Ми самостійно здійснюємо представництво ваших інтересів"
   },
