feature: fix sliders width

--- a/src/translation/ua/global.json
+++ b/src/translation/ua/global.json
@@ -47,7 +47,7 @@
     "labelEmail": "Ваша електронна пошта",
     "labelQuestion": "Ваше питання",
     "placeholderQuestion": "Введіть питання",
-    "submitButton": "Надіслати інформацію"
+    "submitButton": "Відправити"
   },
   "footer": {
     "titleCompany": "ADVOCATE COMPANY «STATUS»",
