Fix text on main page

--- a/src/translation/ua/global.json
+++ b/src/translation/ua/global.json
@@ -15,14 +15,14 @@
     "subTitle": "«STATUS»"
   },
   "information": {
-    "title": "Ми самостійно здійснюємо представництво ваших інтересів"
+    "title": "Те, що відрізняє нас від інших"
   },
   "team": {
     "title": "Наша професійна команда",
-    "subTitle": "Ключовим активом нашої адвокатської компанії є наша досвідчена та висококваліфікована команда юристів."
+    "subTitle": "Ключовим активом AК «STATUS» є досвідчена та висококваліфікована команда юристів та адвокатів."
   },
   "practiceSection": {
-    "title": "Злагоджена команда юристів Status здатна вирішувати складні завдання у різних сферах.",
+    "title": "Ключові практики, в яких ми надаємо юридичну експертизу",
     "moreButton": "Читати далі",
     "hideButton": "Згорнути"
   },
@@ -30,8 +30,8 @@
     "title": "ProBono"
   },
   "results": {
-    "title": "Нашій адвокатській компанії доручено розв'язувати найскладніші правові питання для наших клієнтів",
-    "subTitle": "Ми пишаємося нашими успіхами і вражаючими рішеннями, які ми досягли для наших клієнтів протягом років нашої роботи. Наші адвокати володіють багаторічним досвідом у різних сферах права і завжди готові захищати ваші інтереси з великою ретельністю та"
+    "title": "Нам доручено розв'язувати найскладніші правові питання наших клієнтів",
+    "subTitle": "Ми пишаємося успіхами та результатами, яких ми досягаємо в процесі роботи. Адвокати АК «STATUS» володіють багаторічним досвідом у різних сферах права і завжди готові захищати ваші інтереси з великою ретельністю та віддачею"
   },
   "clients": {
     "title": "Наші клієнти"
